--- a/ontology_constructor/ontology_auth/static/ontology_auth/right-nav-style.css
+++ b/ontology_constructor/ontology_auth/static/ontology_auth/right-nav-style.css
@@ -1,6 +1,8 @@
+@charset "UTF-8";
+
 /**
  * Переключаемая боковая панель навигации
- * выдвигающаяся по клику слева
+ * выдвигающаяся справа
  */
 
 .nav {
@@ -13,25 +15,31 @@
     top: 0;
     bottom: 0;
     margin: 0;
-    /* сдвигаем (прячем) панель относительно левого края страницы */
-    left: -320px;
+    /* сдвигаем (прячем) панель относительно правого края страницы */
+    right: -320px;
     /* внутренние отступы */
     padding: 15px 20px;
     /* плавный переход смещения панели */
-    -webkit-transition: left 0.3s;
-    -moz-transition: left 0.3s;
-    transition: left 0.3s;
+    -webkit-transition: right 0.3s;
+    -moz-transition: right 0.3s;
+    transition: right 0.3s;
     /* определяем цвет фона панели */
     background: #16a085;
     /* поверх других элементов */
     z-index: 2000;
 }
 
+
+/**
+ * Кнопка переключения панели
+ * тег <label>
+ */
+
 .nav-toggle {
     /* абсолютно позиционируем */
     position: absolute;
-    /* относительно левого края панели */
-    left: 320px;
+    /* относительно правого края панели */
+    right: 320px;
     /* отступ от верхнего края панели */
     top: 1em;
     /* внутренние отступы */
@@ -55,43 +63,91 @@
     transition: color .25s ease-in-out;
 }
 
+
+/* определяем текст кнопки 
+ * символ Unicode (TRIGRAM FOR HEAVEN)
+*/
+
 .nav-toggle:after {
     content: '\2630';
     text-decoration: none;
 }
 
+
+/* цвет текста при наведении */
+
 .nav-toggle:hover {
     color: #f4f4f4;
 }
+
+
+/**
+ * Скрытый чекбокс (флажок)
+ * невидим и недоступен :)
+ * имя селектора атрибут флажка
+ */
 
 [id='nav-toggle'] {
     position: absolute;
     display: none;
 }
 
-[id='nav-toggle']:checked~.nav>.nav-toggle {
+
+/**
+ * изменение положения переключателя 
+ * при просмотре на мобильных устройствах
+ * когда навигация раскрыта, распологаем внутри панели
+*/
+
+[id='nav-toggle']:checked ~ .nav > .nav-toggle {
     left: auto;
     right: 2px;
     top: 1em;
 }
 
-[id='nav-toggle']:checked~.nav {
-    left: 0;
-    box-shadow: 4px 0px 20px 0px rgba(0, 0, 0, 0.5);
-    -moz-box-shadow: 4px 0px 20px 0px rgba(0, 0, 0, 0.5);
-    -webkit-box-shadow: 4px 0px 20px 0px rgba(0, 0, 0, 0.5);
+
+/**
+ * Когда флажок установлен, открывается панель
+ * используем псевдокласс:checked
+ */
+
+[id='nav-toggle']:checked ~ .nav {
+    right: 0;
+    box-shadow:-4px 0px 20px 0px rgba(0,0,0, 0.5);
+    -moz-box-shadow:-4px 0px 20px 0px rgba(0,0,0, 0.5);
+    -webkit-box-shadow:-4px 0px 20px 0px rgba(0,0,0, 0.5);
     overflow-y: auto;
 }
 
-[id='nav-toggle']:checked~main>article {
-    -webkit-transform: translateX(320px);
-    -moz-transform: translateX(320px);
-    transform: translateX(320px);
+
+/* 
+ * смещение контента страницы
+ * на размер ширины панели,
+ * фишка необязательная, на любителя
+*/
+
+[id='nav-toggle']:checked ~ main > article {
+    -webkit-transform: translateX(-320px);
+    -moz-transform: translateX(-320px);
+    transform: translateX(-320px);
 }
 
-[id='nav-toggle']:checked~.nav>.nav-toggle:after {
+
+/*
+ * изменение символа переключателя,
+ * привычный крестик (MULTIPLICATION X), 
+ * вы можете испльзовать любой другой значок
+*/
+
+[id='nav-toggle']:checked ~ .nav > .nav-toggle:after {
     content: '\2715';
 }
+
+
+/**
+ * профиксим баг в Android <= 4.1.2
+ * см: http://timpietrusky.com/advanced-checkbox-hack
+ */
 
 body {
     -webkit-animation: bugfix infinite 1s;
@@ -99,29 +155,40 @@ body {
 
 @-webkit-keyframes bugfix {
     to {
-        padding: 0;
+      padding: 0;
     }
 }
+
+
+/**
+ * позаботьтимся о средних и маленьких экранах
+ * мобильных устройств
+ */
 
 @media screen and (min-width: 320px) {
     html,
     body {
-        margin: 0;
-        overflow-x: hidden;
+      margin: 0;
+      overflow-x: hidden;
     }
 }
 
 @media screen and (max-width: 320px) {
     html,
     body {
-        margin: 0;
-        overflow-x: hidden;
+      margin: 0;
+      overflow-x: hidden;
     }
     .nav {
-        width: 100%;
-        box-shadow: none
+      width: 100%;
+      box-shadow: none
     }
 }
+
+
+/**
+ * Формируем стиль заголовка (логотип) панели 
+*/
 
 .nav h2 {
     width: 90%;
@@ -155,7 +222,7 @@ body {
 
 /*плавное появление заголовка (логотипа) при раскрытии панели */
 
-[id='nav-toggle']:checked~.nav h2 {
+[id='nav-toggle']:checked ~ .nav h2 {
     opacity: 1;
     transform: scale(1, 1);
     -ms-transform: scale(1, 1);
@@ -163,27 +230,34 @@ body {
     -webkit-transform: scale(1, 1);
 }
 
-.nav>ul {
+
+/**
+ * формируем непосредственно само меню
+ * используем неупорядоченный список для пунктов меню
+ * прикрутим трансфомации и плавные переходы
+ */
+
+.nav > ul {
     display: block;
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
-.nav>ul>li {
+.nav > ul > li {
     line-height: 2.5;
     opacity: 0;
-    -webkit-transform: translateX(-50%);
-    -moz-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    transform: translateX(-50%);
+    -webkit-transform: translateX(50%);
+    -moz-transform: translateX(50%);
+    -ms-transform: translateX(50%);
+    transform: translateX(50%);
     -webkit-transition: opacity .5s .1s, -webkit-transform .5s .1s;
     -moz-transition: opacity .5s .1s, -moz-transform .5s .1s;
     -ms-transition: opacity .5s .1s, -ms-transform .5s .1s;
     transition: opacity .5s .1s, transform .5s .1s;
 }
 
-[id='nav-toggle']:checked~.nav>ul>li {
+[id='nav-toggle']:checked ~ .nav > ul > li {
     opacity: 1;
     -webkit-transform: translateX(0);
     -moz-transform: translateX(0);
@@ -194,32 +268,32 @@ body {
 
 /* определяем интервалы появления пунктов меню */
 
-.nav>ul>li:nth-child(2) {
+.nav > ul > li:nth-child(2) {
     -webkit-transition: opacity .5s .2s, -webkit-transform .5s .2s;
     transition: opacity .5s .2s, transform .5s .2s;
 }
 
-.nav>ul>li:nth-child(3) {
+.nav > ul > li:nth-child(3) {
     -webkit-transition: opacity .5s .3s, -webkit-transform .5s .3s;
     transition: opacity .5s .3s, transform .5s .3s;
 }
 
-.nav>ul>li:nth-child(4) {
+.nav > ul > li:nth-child(4) {
     -webkit-transition: opacity .5s .4s, -webkit-transform .5s .4s;
     transition: opacity .5s .4s, transform .5s .4s;
 }
 
-.nav>ul>li:nth-child(5) {
+.nav > ul > li:nth-child(5) {
     -webkit-transition: opacity .5s .5s, -webkit-transform .5s .5s;
     transition: opacity .5s .5s, transform .5s .5s;
 }
 
-.nav>ul>li:nth-child(6) {
+.nav > ul > li:nth-child(6) {
     -webkit-transition: opacity .5s .6s, -webkit-transform .5s .6s;
     transition: opacity .5s .6s, transform .5s .6s;
 }
 
-.nav>ul>li:nth-child(7) {
+.nav > ul > li:nth-child(7) {
     -webkit-transition: opacity .5s .7s, -webkit-transform .5s .7s;
     transition: opacity .5s .7s, transform .5s .7s;
 }
@@ -229,7 +303,7 @@ body {
  * оформление ссылок пунктов меню
  */
 
-.nav>ul>li>a {
+.nav > ul > li > a {
     display: inline-block;
     position: relative;
     padding: 0;
@@ -250,8 +324,8 @@ body {
  * состояние ссылок меню при наведении
  */
 
-.nav>ul>li>a:hover,
-.nav>ul>li>a:focus {
+.nav > ul > li > a:hover,
+.nav > ul > li > a:focus {
     color: white;
     padding-left: 15px;
 }
@@ -261,7 +335,7 @@ body {
  * линия подчеркивания ссылок меню
  */
 
-.nav>ul>li>a:before {
+.nav > ul > li > a:before {
     content: '';
     display: block;
     position: absolute;
@@ -273,7 +347,7 @@ body {
     transition: width 0s ease;
 }
 
-.nav>ul>li>a:after {
+.nav > ul > li > a:after {
     content: '';
     display: block;
     position: absolute;
@@ -292,16 +366,45 @@ body {
  * ссылок при наведении
  */
 
-.nav>ul>li>a:hover:before {
+.nav > ul > li > a:hover:before {
     width: 0%;
     background: #3bc1a0;
     -webkit-transition: width .5s ease;
     transition: width .5s ease;
 }
 
-.nav>ul>li>a:hover:after {
+.nav > ul > li > a:hover:after {
     width: 0%;
     background: transparent;
     -webkit-transition: width 0s ease;
     transition: width 0s ease;
 }
+
+
+/* фон затемнения на основной контент 
+ * при этом элементы блокируютя
+ * спорная такая фича, если оно вам надо
+ * просто раскомментируйте
+*/
+
+/*
+.mask-content {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    visibility: hidden;
+    opacity: 0;
+}
+
+[id='nav-toggle']:checked ~ .mask-content {
+    visibility: visible;
+    opacity: 1;
+    -webkit-transition: opacity .5s, visibility .5s;
+    transition: opacity .5s, visibility .5s;
+}
+*/
