--- a/ontology_constructor/ontology_auth/static/ontology_auth/style_add.css
+++ b/ontology_constructor/ontology_auth/static/ontology_auth/style_add.css
@@ -70,7 +70,11 @@ input[type="email"]::-moz-placeholder {
     color: gray;
 } */
 
-
+.container-1 {
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+}
 .g-color{
     color: #828282;
 }
