--- a/ontology_constructor/ontology_auth/static/ontology_auth/style_auth.css
+++ b/ontology_constructor/ontology_auth/static/ontology_auth/style_auth.css
@@ -128,7 +128,35 @@ input[type="password"]::-moz-placeholder {
     text-align: center;
     justify-content: center;
 }
-
+form input[type=text] {
+    color: black;
+    font-weight: 500;
+    font-size: 23px;
+    font-family: "Inter", sans-serif;
+    line-height: 30px;
+    padding: .6em 1.4em .5em .8em; 
+    margin-bottom: 20px;
+    margin-right: 30px;
+    margin-left: 30px;
+    margin-top: 15px;
+    width: 60%;
+    border-radius: 8px;
+}
+form textarea {
+    color: black;
+    font-weight: 500;
+    font-size: 23px;
+    font-family: "Inter", sans-serif;
+    background-color: white;
+    border-radius: 8px;
+    border: 2px solid black;
+    padding: .6em 1.4em .5em .8em; 
+    line-height: 30px;
+    width: 80%;
+    margin-left: 30px;
+    margin-top: 30px;
+    margin-right: 30px;
+}
 form select { 
     
     font-size: 23px; 
@@ -137,7 +165,7 @@ form select {
     color: #444; 
     line-height: 1.3; 
     padding: .6em 1.4em .5em .8em; 
-    width: 100px; 
+    width: 200px; 
     max-width: 100%; 
     box-sizing: border-box; 
     margin: 20px 20px 20px 20px; 
@@ -161,4 +189,9 @@ form select {
      *[dir="rtl"] form select, :root:lang(ar) form select, :root:lang(iw) form select { 
     background-position: left .7em top 50%, 0 0; 
     padding: .6em .8em .5em 1.4em; 
+    }
+    .container-1 {
+        display: flex;
+        flex-direction: row;
+        width: 80%;
     }
