--- a/ontology_constructor/ontology_auth/templates/ontology_auth/subject_detail.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/subject_detail.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Объект {{subject.name}}</title>
+    <title>Субъект {{subject.name}}</title>
     <link rel="stylesheet" href="{% static 'ontology_auth/detail.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="shortcut icon" type="image/png" href="{% static 'ontology_auth/favicon.ico' %}" />
@@ -13,7 +13,7 @@
 
 <body>
     <div class="title_weapper inter-fz fs-2" gap="20 px">
-        Объект
+        Субъект
     </div>
     <form method="POST" action="/subject/{{subject.id}}/update">
         {% csrf_token %}
@@ -26,13 +26,16 @@
             {{ subject.created_at}}
         </div>
         <div>
-            <button class="button inter-fz fs-6" type="submit" id="subm" name="subm_ont" value="{{ subbject.id }}">Сохранить</button>
+            <button class="button inter-fz fs-6" type="submit" id="subm" name="subm_ont" value="{{ subject.id }}">Сохранить</button>
         </div>
     </form>
     
     
+    {% if request.user.is_authenticated %}
+    {% if request.user.id == subject.owner.id %}
     <button class="button" onclick="edited()" id="edit">Редактировать</button>
-    
+    {% endif %}
+    {% endif %}
     <div class="title_weapper inter-fz fs-4" gap="20 px">
         Список предикатов
     </div>
