--- a/ontology_constructor/ontology_auth/static/ontology_auth/style_auth.css
+++ b/ontology_constructor/ontology_auth/static/ontology_auth/style_auth.css
@@ -153,6 +153,7 @@ form textarea {
     padding: .6em 1.4em .5em .8em; 
     line-height: 30px;
     width: 80%;
+    height: 100px;
     margin-left: 30px;
     margin-top: 30px;
     margin-right: 30px;
