--- a/ontology_constructor/ontology_auth/templates/ontology_auth/subject_detail.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/subject_detail.html
@@ -1,9 +1,13 @@
-<!DOCTYPE html> {% load static %}
+{% load static %}
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'ontology_auth/left-nav-style.css' %}">
+    <link rel="stylesheet" href="{% static 'ontology_auth/style.css' %}">
+    <link rel="stylesheet" href="{% static 'ontology_auth/style_profile.css' %}">
     <title>Субъект {{subject.name}}</title>
     <link rel="stylesheet" href="{% static 'ontology_auth/detail.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -12,6 +16,44 @@
 </head>
 
 <body>
+    <!-- 
+    Скрытый checkbox, отвечающий за переключение панели, должен быть в верхней части документа, лучше сразу после тега `<body>`
+
+    `id` атрибут предназначен для связки с атрибутом `for` тега <label>
+
+    Атрибут `hidden` указывает состояние «скрытый» у текущего элемента
+    -->
+    <input type="checkbox" id="nav-toggle" hidden>
+    <!-- 
+    Выдвижную панель размещаете ниже
+    флажка (checkbox), но не обязательно 
+    непосредственно после него, например
+    можно и в конце страницы
+    -->
+    <nav class="nav">
+        <!-- 
+    Метка с именем `id` чекбокса в `for` атрибуте
+    Символ Unicode 'TRIGRAM FOR HEAVEN' (U+2630)
+    Пустой атрибут `onclick` используем для исправления бага в iOS < 6.0
+    См: http://timpietrusky.com/advanced-checkbox-hack 
+    -->
+        <label for="nav-toggle" class="nav-toggle" onclick></label>
+        <!-- 
+    Здесь размещаете любую разметку,
+    если это меню, то скорее всего неупорядоченный список <ul>
+    -->
+        <h2 class="logo">
+            <a href="//UTMN.SU/">UTMN.SU</a>
+        </h2>
+        <ul>
+            <li><a href="#1">Создание онтологии</a>
+                <li>
+                    <a href="#2">Список онтологий</a>
+                    <li><a href="#3">Личный кабинет</a>
+
+        </ul>
+    </nav>
+    <main role="main">
     <div class="title_weapper inter-fz fs-2" gap="20 px">
         Субъект
     </div>
@@ -66,6 +108,8 @@
 
 
     </table>
+    </main>
 </body>
+
 
 </html>
