--- a/ontology_constructor/ontology_auth/static/ontology_auth/right-nav-style.css
+++ b/ontology_constructor/ontology_auth/static/ontology_auth/right-nav-style.css
@@ -24,7 +24,7 @@
     -moz-transition: right 0.3s;
     transition: right 0.3s;
     /* определяем цвет фона панели */
-    background: #16a085;
+    background: #000000;
     /* поверх других элементов */
     z-index: 2000;
 }
@@ -99,7 +99,7 @@
  * когда навигация раскрыта, распологаем внутри панели
 */
 
-[id='nav-toggle']:checked ~ .nav > .nav-toggle {
+[id='nav-toggle']:checked~.nav>.nav-toggle {
     left: auto;
     right: 2px;
     top: 1em;
@@ -111,11 +111,11 @@
  * используем псевдокласс:checked
  */
 
-[id='nav-toggle']:checked ~ .nav {
+[id='nav-toggle']:checked~.nav {
     right: 0;
-    box-shadow:-4px 0px 20px 0px rgba(0,0,0, 0.5);
-    -moz-box-shadow:-4px 0px 20px 0px rgba(0,0,0, 0.5);
-    -webkit-box-shadow:-4px 0px 20px 0px rgba(0,0,0, 0.5);
+    box-shadow: -4px 0px 20px 0px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: -4px 0px 20px 0px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: -4px 0px 20px 0px rgba(0, 0, 0, 0.5);
     overflow-y: auto;
 }
 
@@ -126,7 +126,7 @@
  * фишка необязательная, на любителя
 */
 
-[id='nav-toggle']:checked ~ main > article {
+[id='nav-toggle']:checked~main>article {
     -webkit-transform: translateX(-320px);
     -moz-transform: translateX(-320px);
     transform: translateX(-320px);
@@ -139,7 +139,7 @@
  * вы можете испльзовать любой другой значок
 */
 
-[id='nav-toggle']:checked ~ .nav > .nav-toggle:after {
+[id='nav-toggle']:checked~.nav>.nav-toggle:after {
     content: '\2715';
 }
 
@@ -155,7 +155,7 @@ body {
 
 @-webkit-keyframes bugfix {
     to {
-      padding: 0;
+        padding: 0;
     }
 }
 
@@ -168,20 +168,20 @@ body {
 @media screen and (min-width: 320px) {
     html,
     body {
-      margin: 0;
-      overflow-x: hidden;
+        margin: 0;
+        overflow-x: hidden;
     }
 }
 
 @media screen and (max-width: 320px) {
     html,
     body {
-      margin: 0;
-      overflow-x: hidden;
+        margin: 0;
+        overflow-x: hidden;
     }
     .nav {
-      width: 100%;
-      box-shadow: none
+        width: 100%;
+        box-shadow: none
     }
 }
 
@@ -222,7 +222,7 @@ body {
 
 /*плавное появление заголовка (логотипа) при раскрытии панели */
 
-[id='nav-toggle']:checked ~ .nav h2 {
+[id='nav-toggle']:checked~.nav h2 {
     opacity: 1;
     transform: scale(1, 1);
     -ms-transform: scale(1, 1);
@@ -237,14 +237,14 @@ body {
  * прикрутим трансфомации и плавные переходы
  */
 
-.nav > ul {
+.nav>ul {
     display: block;
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
-.nav > ul > li {
+.nav>ul>li {
     line-height: 2.5;
     opacity: 0;
     -webkit-transform: translateX(50%);
@@ -257,7 +257,7 @@ body {
     transition: opacity .5s .1s, transform .5s .1s;
 }
 
-[id='nav-toggle']:checked ~ .nav > ul > li {
+[id='nav-toggle']:checked~.nav>ul>li {
     opacity: 1;
     -webkit-transform: translateX(0);
     -moz-transform: translateX(0);
@@ -268,32 +268,32 @@ body {
 
 /* определяем интервалы появления пунктов меню */
 
-.nav > ul > li:nth-child(2) {
+.nav>ul>li:nth-child(2) {
     -webkit-transition: opacity .5s .2s, -webkit-transform .5s .2s;
     transition: opacity .5s .2s, transform .5s .2s;
 }
 
-.nav > ul > li:nth-child(3) {
+.nav>ul>li:nth-child(3) {
     -webkit-transition: opacity .5s .3s, -webkit-transform .5s .3s;
     transition: opacity .5s .3s, transform .5s .3s;
 }
 
-.nav > ul > li:nth-child(4) {
+.nav>ul>li:nth-child(4) {
     -webkit-transition: opacity .5s .4s, -webkit-transform .5s .4s;
     transition: opacity .5s .4s, transform .5s .4s;
 }
 
-.nav > ul > li:nth-child(5) {
+.nav>ul>li:nth-child(5) {
     -webkit-transition: opacity .5s .5s, -webkit-transform .5s .5s;
     transition: opacity .5s .5s, transform .5s .5s;
 }
 
-.nav > ul > li:nth-child(6) {
+.nav>ul>li:nth-child(6) {
     -webkit-transition: opacity .5s .6s, -webkit-transform .5s .6s;
     transition: opacity .5s .6s, transform .5s .6s;
 }
 
-.nav > ul > li:nth-child(7) {
+.nav>ul>li:nth-child(7) {
     -webkit-transition: opacity .5s .7s, -webkit-transform .5s .7s;
     transition: opacity .5s .7s, transform .5s .7s;
 }
@@ -303,7 +303,7 @@ body {
  * оформление ссылок пунктов меню
  */
 
-.nav > ul > li > a {
+.nav>ul>li>a {
     display: inline-block;
     position: relative;
     padding: 0;
@@ -324,8 +324,8 @@ body {
  * состояние ссылок меню при наведении
  */
 
-.nav > ul > li > a:hover,
-.nav > ul > li > a:focus {
+.nav>ul>li>a:hover,
+.nav>ul>li>a:focus {
     color: white;
     padding-left: 15px;
 }
@@ -335,7 +335,7 @@ body {
  * линия подчеркивания ссылок меню
  */
 
-.nav > ul > li > a:before {
+.nav>ul>li>a:before {
     content: '';
     display: block;
     position: absolute;
@@ -347,7 +347,7 @@ body {
     transition: width 0s ease;
 }
 
-.nav > ul > li > a:after {
+.nav>ul>li>a:after {
     content: '';
     display: block;
     position: absolute;
@@ -355,7 +355,7 @@ body {
     bottom: 0;
     height: 1px;
     width: 100%;
-    background: #3bc1a0;
+    background: #000000;
     -webkit-transition: width .5s ease;
     transition: width .5s ease;
 }
@@ -366,14 +366,14 @@ body {
  * ссылок при наведении
  */
 
-.nav > ul > li > a:hover:before {
+.nav>ul>li>a:hover:before {
     width: 0%;
     background: #3bc1a0;
     -webkit-transition: width .5s ease;
     transition: width .5s ease;
 }
 
-.nav > ul > li > a:hover:after {
+.nav>ul>li>a:hover:after {
     width: 0%;
     background: transparent;
     -webkit-transition: width 0s ease;
@@ -386,6 +386,7 @@ body {
  * спорная такая фича, если оно вам надо
  * просто раскомментируйте
 */
+
 
 /*
 .mask-content {
