--- a/ontology_constructor/ontology_auth/templates/ontology_auth/profile.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/profile.html
@@ -46,6 +46,7 @@
                 <li>
                     <a href="#2">Список онтологий</a>
                     <li><a href="#3">Личный кабинет</a>
+                        <li><a href="#3">Выйти</a>
 
         </ul>
     </nav>
