--- a/ontology_constructor/ontology_auth/templates/ontology_auth/add_ontology.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/add_ontology.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="{% static 'ontology_auth/style.css' %}">
     <title>Создание онтологии</title>
     <link rel="stylesheet" href="{% static 'ontology_auth/style_auth.css' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="shortcut icon" type="image/png" href="{% static 'ontology_auth/favicon.ico' %}" />
 </head>
 
@@ -45,38 +44,38 @@
             <a href="//UTMN.SU/">UTMN.SU</a>
         </h2>
         <ul>
-            <li><a href="#1">Создание онтологии</a>
-                <li>
-                    <a href="#2">Список онтологий</a>
-                    <li><a href="#3">Личный кабинет</a>
+            <li>
+                <a href="{%url 'add_ontology' %}">Создание онтологии</a>
+                <li><a href=" {%url 'ontology_list_1' %} ">Список онтологий</a>
+                    <li><a href="{%url 'profile' %} ">Личный кабинет</a> {% if request.user.is_authenticated %}
+                        <li><a href="{%url 'logout' %} ">Выйти</a> {% else %}
+                            <li><a href="{%url 'auth' %} ">Войти</a> {% endif %}
+
 
         </ul>
     </nav>
     <main role="main">
         {% block content %}
-    <form method="POST">
-        <div class="name_wrapper">
-            <div class="title_weapper inter-fz fs-2" style="margin-left:20px;" >
-                <p>Создание онтологии</p>
+        <form method="POST">
+            <div class="name_wrapper">
+                <div class="title_weapper inter-fz fs-2" style="margin-left:20px;">
+                    <p>Создание онтологии</p>
+                </div>
             </div>
-        </div>
-        {% csrf_token %}
-        {% for field in form %}
-        <div style="margin:20px;" gap="20px">
-            {{field.label_tag}}
-            <div gap="20px" >{{field}}</div>
-            {% if field.errors%}
-            {% for error in field.errors %}
-            <div class="alert alert-danger">
-                {{error}}
+            {% csrf_token %} {% for field in form %}
+            <div style="margin:20px;" gap="20px">
+                {{field.label_tag}}
+                <div gap="20px">{{field}}</div>
+                {% if field.errors%} {% for error in field.errors %}
+                <div class="alert alert-danger">
+                    {{error}}
+                </div>
+                {% endfor %} {% endif %}
             </div>
             {% endfor %}
-            {% endif %}
-        </div>
-        {% endfor %}
-        <button class="btn-auth" type="submit" style="margin-left:20px;" gap="20px">Сохранить</button>
-    </form>
-{% endblock %}
+            <button class="btn-auth" type="submit" style="margin-left:20px;" gap="20px">Сохранить</button>
+        </form>
+        {% endblock %}
     </main>
 </body>
 
