--- a/ontology_constructor/ontology_auth/templates/ontology_auth/auth.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/auth.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'ontology_auth/style_auth.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="shortcut icon" type="image/png" href="{% static 'ontology_auth/favicon.ico' %}" />
     <title>{% block title %}Авторизация{% endblock %}</title>
 </head>
 
