--- a/ontology_constructor/ontology_auth/templates/ontology_auth/ontology_list.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/ontology_list.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'ontology_auth/left-nav-style.css' %}">
     <link rel="stylesheet" href="{% static 'ontology_auth/style.css' %}">
-    <link rel="stylesheet" href="{% static 'ontology_auth/style_profile.css' %}"><title>Создание субъекта</title>
+    <link rel="stylesheet" href="{% static 'ontology_auth/style_profile.css' %}">
+    <title>Создание субъекта</title>
     <link rel="stylesheet" href="{% static 'ontology_auth/style_auth.css' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="shortcut icon" type="image/png" href="{% static 'ontology_auth/favicon.ico' %}" />
     <title>Мои онтологии</title>
     <link rel="stylesheet" href="{% static 'ontology_auth/style_ontology_list.css' %}">
@@ -58,128 +58,130 @@
             <li><a href="#1">Создание онтологии</a>
                 <li>
                     <a href="#2">Список онтологий</a>
-                    <li><a href="#3">Личный кабинет</a>
+                    <li><a href="#3">Личный кабинет</a> {% if request.user.is_authenticated %}
+                        <li><a href="{%url 'logout' %}">Выйти</a> {% else %}
+                            <li><a href="{%url 'auth' %}">Войти</a> {% endif %}
 
         </ul>
     </nav>
     <main role="main">
-    
- <div class="name_wrapper">
-        <div class="title_weapper inter-fz fs-2" style="margin-left:20px; text-align: center">
-            <p>Список онтологий</p>
+
+        <div class="name_wrapper">
+            <div class="title_weapper inter-fz fs-2" style="margin-left:20px; text-align: center">
+                <p>Список онтологий</p>
+            </div>
         </div>
-    </div>
-    <div class="title_weapper inter-fz fs-4" style="margin-left:20px;">
-        <div class="btn_wrappr inter-fz-1 fs-4" >
-            <button class="btn_wrappr_1 inter-fz-1" style="margin-left:80px;" onclick="window.location.href='/ontology/new/subject/'; return false">Создать субъект</button>
-            <button class="btn_wrappr_1 inter-fz-1" style="margin-left:80px;" onclick="window.location.href='/ontology/new/object/'; return false">Создать объект</button>
-            <button class="btn_wrappr_1 inter-fz-1" style="margin-left:80px;" onclick="window.location.href='/ontology/new/predicat/'; return false">Создать предикат</button>
+        <div class="title_weapper inter-fz fs-4" style="margin-left:20px;">
+            <div class="btn_wrappr inter-fz-1 fs-4">
+                <button class="btn_wrappr_1 inter-fz-1" style="margin-left:80px;" onclick="window.location.href='/ontology/new/subject/'; return false">Создать субъект</button>
+                <button class="btn_wrappr_1 inter-fz-1" style="margin-left:80px;" onclick="window.location.href='/ontology/new/object/'; return false">Создать объект</button>
+                <button class="btn_wrappr_1 inter-fz-1" style="margin-left:80px;" onclick="window.location.href='/ontology/new/predicat/'; return false">Создать предикат</button>
+            </div>
         </div>
-    </div>
-    <div style="margin-bottom:20px; margin-left: 30px">
-        <table class="table-1">
-            <tr>
-                <th onclick="my_ontology_list_func()" id="my_ontology_list_but">Мои онтологии</th>
-                <th onclick="gl_ontology_list_func()" id="gl_ontology_list_but">Общедоступные онтологии</th>
-                <th onclick="subject_list_func()" id="subject_list_but">Субъекты</th>
-                <th onclick="object_list_func()" id="object_list_but">Объекты</th>
-            </tr>
-        </table>
-    </div>
-    <div id="my_ontology_list">
-        <table class="table-2">
-            <thead class="inter-fz">
-                
+        <div style="margin-bottom:20px; margin-left: 30px">
+            <table class="table-1">
+                <tr>
+                    <th onclick="my_ontology_list_func()" id="my_ontology_list_but">Мои онтологии</th>
+                    <th onclick="gl_ontology_list_func()" id="gl_ontology_list_but">Общедоступные онтологии</th>
+                    <th onclick="subject_list_func()" id="subject_list_but">Субъекты</th>
+                    <th onclick="object_list_func()" id="object_list_but">Объекты</th>
+                </tr>
+            </table>
+        </div>
+        <div id="my_ontology_list">
+            <table class="table-2">
+                <thead class="inter-fz">
+
                     <th>Наименование онтологии</th>
                     <th>Доступность онтологии</th>
                     <th>Дата создания онтологии</th>
                     <th>Создатель онтологии</th>
                     <th></th>
-            </thead>
-            {% for ontology in my_ontologys %}
-            <div class="inter-fz" gap="20px">
-                <tr>
-                    <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.name}}</td>
-                    <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.access}}</td>
-                    <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.created_at}}</td>
-                    <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.owner}}</td>
-                    <td>
-                        <form action="" method="get">
-                            <button class="button inter-fz-1" name="delete_ontology" value="{{ ontology.id }}">Удалить</button>
-                        </form>
-                    </td>
-                </tr>
-            </div>
-            {% empty %}
-            <div class="title_weapper inter-fz fs-2" style="margin-left:20px;">
-                <p>У вас пока нет онтологий!</p>
-            </div>
-            {% endfor %}
-        </table>
-    </div>
-    <div id="gl_ontology_list">
-        <table class="table-2">
-            <thead class="inter-fz">
-                
+                </thead>
+                {% for ontology in my_ontologys %}
+                <div class="inter-fz" gap="20px">
+                    <tr>
+                        <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.name}}</td>
+                        <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.access}}</td>
+                        <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.created_at}}</td>
+                        <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.owner}}</td>
+                        <td>
+                            <form action="" method="get">
+                                <button class="button inter-fz-1" name="delete_ontology" value="{{ ontology.id }}">Удалить</button>
+                            </form>
+                        </td>
+                    </tr>
+                </div>
+                {% empty %}
+                <div class="title_weapper inter-fz fs-2" style="margin-left:20px;">
+                    <p>У вас пока нет онтологий!</p>
+                </div>
+                {% endfor %}
+            </table>
+        </div>
+        <div id="gl_ontology_list">
+            <table class="table-2">
+                <thead class="inter-fz">
+
                     <th>Наименование онтологии</th>
                     <th>Доступность онтологии</th>
                     <th>Дата создания онтологии</th>
                     <th>Создатель онтологии</th>
-            </thead>
-            {% for ontology in gl_ontologys %}
-            <div class="inter-fz" gap="20px">
-                <tr>
-                    <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.name}}</td>
-                    <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.access}}</td>
-                    <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.created_at}}</td>
-                    <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.owner}}</td>
-                    
-                </tr>
-            </div>
-            {% empty %}
-            <div class="title_weapper inter-fz fs-2" style="margin-left:20px;">
-                <p>У вас пока нет онтологий!</p>
-            </div>
-            {% endfor %}
-        </table>
-    </div>
-    <div id="object_list">
-        <table class="table-2">
-            <thead class="inter-fz">
-                
+                </thead>
+                {% for ontology in gl_ontologys %}
+                <div class="inter-fz" gap="20px">
+                    <tr>
+                        <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.name}}</td>
+                        <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.access}}</td>
+                        <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.created_at}}</td>
+                        <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.owner}}</td>
+
+                    </tr>
+                </div>
+                {% empty %}
+                <div class="title_weapper inter-fz fs-2" style="margin-left:20px;">
+                    <p>У вас пока нет онтологий!</p>
+                </div>
+                {% endfor %}
+            </table>
+        </div>
+        <div id="object_list">
+            <table class="table-2">
+                <thead class="inter-fz">
+
                     <th>Наименование субъекта</th>
                     <th>Дата создания</th>
                     <th>Создатель субъекта</th>
                     <th></th>
-            </thead>
-            {% for object in objects %}
-            <div class="inter-fz" gap="20px">
-                <tr>
-                    <td class="inter-fz-1" onclick="window.location.href='/object/{{ object.id }}'; return false">{{object.name}}</td>
-                    <td class="inter-fz-1" onclick="window.location.href='/object/{{ object.id }}'; return false">{{object.created_at}}</td>
-                    <td class="inter-fz-1" onclick="window.location.href='/object/{{ object.id }}'; return false">{{object.owner}}</td>
-                    <td>
-                        <form action="" method="get">
-                            <button class="button inter-fz-1" name="delete_object" value="{{ object.id }}">Удалить</button>
-                        </form>
-                    </td>
-                </tr>
-            </div>
-            {% empty %}
-            <div class="title_weapper inter-fz fs-2" style="margin-left:20px;">
-                <p>У вас пока нет объектов!</p>
-            </div>
-            {% endfor %}
-        </table>
-    </div>
+                </thead>
+                {% for object in objects %}
+                <div class="inter-fz" gap="20px">
+                    <tr>
+                        <td class="inter-fz-1" onclick="window.location.href='/object/{{ object.id }}'; return false">{{object.name}}</td>
+                        <td class="inter-fz-1" onclick="window.location.href='/object/{{ object.id }}'; return false">{{object.created_at}}</td>
+                        <td class="inter-fz-1" onclick="window.location.href='/object/{{ object.id }}'; return false">{{object.owner}}</td>
+                        <td>
+                            <form action="" method="get">
+                                <button class="button inter-fz-1" name="delete_object" value="{{ object.id }}">Удалить</button>
+                            </form>
+                        </td>
+                    </tr>
+                </div>
+                {% empty %}
+                <div class="title_weapper inter-fz fs-2" style="margin-left:20px;">
+                    <p>У вас пока нет объектов!</p>
+                </div>
+                {% endfor %}
+            </table>
+        </div>
         <div id="subject_list">
             <table class="table-2">
                 <thead class="inter-fz">
-                    
-                        <th>Наименование субъекта</th>
-                        <th>Дата создания</th>
-                        <th>Создатель субъекта</th>
-                        <th></th>
+
+                    <th>Наименование субъекта</th>
+                    <th>Дата создания</th>
+                    <th>Создатель субъекта</th>
+                    <th></th>
                 </thead>
                 {% for subject in subjects %}
                 <div class="inter-fz" gap="20px">
