--- a/ontology_constructor/ontology_auth/templates/ontology_auth/profile.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/profile.html
@@ -6,9 +6,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'ontology_auth/left-nav-style.css' %}">
-    <link rel="stylesheet" href="{% static 'ontology_auth/style.css' %}">
+    <link rel="stylesheet" href="{% static 'ontology_auth/style_ontology_list.css' %}">
+
     <link rel="stylesheet" href="{% static 'ontology_auth/style_profile.css' %}">
-    <title>Document</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'ontology_auth/favicon.ico' %}" />
+    <title>Профиль</title>
 </head>
 
 <body>
@@ -42,16 +44,58 @@
             <a href="//UTMN.SU/">UTMN.SU</a>
         </h2>
         <ul>
-            <li><a href="#1">Создание онтологии</a>
-                <li>
-                    <a href="#2">Список онтологий</a>
-                    <li><a href="#3">Личный кабинет</a>
-                        <li><a href="#3">Выйти</a>
+            <li>
+                <a href="{%url 'add_ontology' %}">Создание онтологии</a>
+                <li><a href=" {%url 'ontology_list_1' %} ">Список онтологий</a>
+                    <li><a href="{%url 'profile' %} ">Личный кабинет</a> {% if request.user.is_authenticated %}
+                        <li><a href="{%url 'logout' %} ">Выйти</a> {% else %}
+                            <li><a href="{%url 'auth' %} ">Войти</a> {% endif %}
+
 
         </ul>
     </nav>
-    <main role="main">
-        
+    <main role="main ">
+        <section style="padding-left: 48px; ">
+
+            {% if request.user.is_authenticated %}
+            <h1> Добро пожаловать, {{ user.get_username }}</h1>
+            <h2>Список ваших онтологий:</h2>
+
+            <div id="my_ontology_list ">
+                <table class="table-2 ">
+                    <thead class="inter-fz ">
+
+                        <th>Наименование онтологии</th>
+                        <th>Доступность онтологии</th>
+                        <th>Дата создания онтологии</th>
+                        <th>Создатель онтологии</th>
+                        <th></th>
+                    </thead>
+                    {% for ontology in my_ontologys %}
+                    <div class="inter-fz " gap="20px ">
+                        <tr>
+                            <td class="inter-fz-1 " onclick="window.location.href='/ontology/{{ ontology.id }}' ; return false ">{{ontology.name}}</td>
+                            <td class="inter-fz-1 " onclick="window.location.href='/ontology/{{ ontology.id }}' ; return false ">{{ontology.access}}</td>
+                            <td class="inter-fz-1 " onclick="window.location.href='/ontology/{{ ontology.id }}' ; return false ">{{ontology.created_at}}</td>
+                            <td class="inter-fz-1 " onclick="window.location.href='/ontology/{{ ontology.id }}' ; return false ">{{ontology.owner}}</td>
+                            <td>
+                                <form action=" " method="get ">
+                                    <button class="button inter-fz-1 " name="delete_ontology " value="{{ ontology.id }} ">Удалить</button>
+                                </form>
+                            </td>
+                        </tr>
+                    </div>
+                    {% empty %}
+                    <div class="title_weapper inter-fz fs-2 " style="margin-left:20px; ">
+                        <p>У вас пока нет онтологий!</p>
+                    </div>
+                    {% endfor %}
+                </table>
+            </div>
+
+            {% else %}
+            <h1>Вы не авторизированы, <a href="{% url 'auth'%} ">авторизируйтесь</a> </h1> {% endif %}
+        </section>
     </main>
 </body>
 
