--- a/ontology_constructor/ontology_auth/templates/ontology_auth/rdf_type_detail.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/rdf_type_detail.html
@@ -46,44 +46,43 @@
             <a href="//UTMN.SU/">UTMN.SU</a>
         </h2>
         <ul>
-            <li><a href="#1">Создание онтологии</a>
-                <li>
-                    <a href="#2">Список онтологий</a>
-                    <li><a href="#3">Личный кабинет</a>
+            <li>
+                <a href="{%url 'add_ontology' %}">Создание онтологии</a>
+                <li><a href=" {%url 'ontology_list_1' %} ">Список онтологий</a>
+                    <li><a href="{%url 'profile' %} ">Личный кабинет</a> {% if request.user.is_authenticated %}
+                        <li><a href="{%url 'logout' %} ">Выйти</a> {% else %}
+                            <li><a href="{%url 'auth' %} ">Войти</a> {% endif %}
+
 
         </ul>
     </nav>
     <main role="main">
-     <div class="title_weapper inter-fz fs-2" gap="20 px">
-        Предикат
-    </div>
-    <form method="POST" action="/rdf_type/{{rdf_type.id}}/update">
-        {% csrf_token %}
-        {{form.name.label_tag}}
-        <div>{{form.name}}</div>
-        {{form.description.label_tag}}
-        <div>{{form.description}}</div>
-        
-        <div class="container-1">
-            {{form.subject.label_tag}}
-            <div>{{form.subject}}</div>
-            {{form.object.label_tag}}
-            <div>{{form.object}}</div>
-            {{form.ontology.label_tag}}
-            <div>{{form.ontology}}</div>
+        <div class="title_weapper inter-fz fs-2" gap="20 px">
+            Предикат
         </div>
-        <div>
-            <button class="button inter-fz fs-6" type="submit" id="subm" name="subm_ont" value="{{ rdf_type.id }}">Сохранить</button>
-        </div>
-    </form>
-    
-    
-    {% if request.user.is_authenticated %}
-    {% if request.user.id == rdf_type.ontology.owner.id %}
-    <button class="button" onclick="edited()" id="edit">Редактировать</button>
-    {% endif %}
-    {% endif %}
-    
+        <form method="POST" action="/rdf_type/{{rdf_type.id}}/update">
+            {% csrf_token %} {{form.name.label_tag}}
+            <div>{{form.name}}</div>
+            {{form.description.label_tag}}
+            <div>{{form.description}}</div>
+
+            <div class="container-1">
+                {{form.subject.label_tag}}
+                <div>{{form.subject}}</div>
+                {{form.object.label_tag}}
+                <div>{{form.object}}</div>
+                {{form.ontology.label_tag}}
+                <div>{{form.ontology}}</div>
+            </div>
+            <div>
+                <button class="button inter-fz fs-6" type="submit" id="subm" name="subm_ont" value="{{ rdf_type.id }}">Сохранить</button>
+            </div>
+        </form>
+
+
+        {% if request.user.is_authenticated %} {% if request.user.id == rdf_type.ontology.owner.id %}
+        <button class="button" onclick="edited()" id="edit">Редактировать</button> {% endif %} {% endif %}
+
     </main>
 </body>
 
