--- a/ontology_constructor/ontology_auth/templates/ontology_auth/register.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/register.html
@@ -1,10 +1,12 @@
+{% load static%}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'ontology_auth/favicon.ico' %}" />
+    <title>Регистрация</title>
 </head>
 
 
