--- a/ontology_constructor/ontology_auth/templates/ontology_auth/subject_detail.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/subject_detail.html
@@ -46,68 +46,66 @@
             <a href="//UTMN.SU/">UTMN.SU</a>
         </h2>
         <ul>
-            <li><a href="#1">Создание онтологии</a>
-                <li>
-                    <a href="#2">Список онтологий</a>
-                    <li><a href="#3">Личный кабинет</a>
+            <li>
+                <a href="{%url 'add_ontology' %}">Создание онтологии</a>
+                <li><a href=" {%url 'ontology_list_1' %} ">Список онтологий</a>
+                    <li><a href="{%url 'profile' %} ">Личный кабинет</a> {% if request.user.is_authenticated %}
+                        <li><a href="{%url 'logout' %} ">Выйти</a> {% else %}
+                            <li><a href="{%url 'auth' %} ">Войти</a> {% endif %}
+
 
         </ul>
     </nav>
     <main role="main">
-    <div class="title_weapper inter-fz fs-2" gap="20 px">
-        Субъект
-    </div>
-    <form method="POST" action="/subject/{{subject.id}}/update">
-        {% csrf_token %}
-        {% for field in form %}
-        <div>
-             {{field}}
+        <div class="title_weapper inter-fz fs-2" gap="20 px">
+            Субъект
         </div>
-        {% endfor %}
-        <div class="inter-fz fs-4" gap="20 px">
-            {{ subject.created_at}}
+        <form method="POST" action="/subject/{{subject.id}}/update">
+            {% csrf_token %} {% for field in form %}
+            <div>
+                {{field}}
+            </div>
+            {% endfor %}
+            <div class="inter-fz fs-4" gap="20 px">
+                {{ subject.created_at}}
+            </div>
+            <div>
+                <button class="button inter-fz fs-6" type="submit" id="subm" name="subm_ont" value="{{ subject.id }}">Сохранить</button>
+            </div>
+        </form>
+
+
+        {% if request.user.is_authenticated %} {% if request.user.id == subject.owner.id %}
+        <button class="button" onclick="edited()" id="edit">Редактировать</button> {% endif %} {% endif %}
+        <div class="title_weapper inter-fz fs-4" gap="20 px">
+            Список предикатов
         </div>
-        <div>
-            <button class="button inter-fz fs-6" type="submit" id="subm" name="subm_ont" value="{{ subject.id }}">Сохранить</button>
-        </div>
-    </form>
-    
-    
-    {% if request.user.is_authenticated %}
-    {% if request.user.id == subject.owner.id %}
-    <button class="button" onclick="edited()" id="edit">Редактировать</button>
-    {% endif %}
-    {% endif %}
-    <div class="title_weapper inter-fz fs-4" gap="20 px">
-        Список предикатов
-    </div>
-    {% block content %}
-    <table class="table-2">
-        <thead class="inter-fz">
+        {% block content %}
+        <table class="table-2">
+            <thead class="inter-fz">
                 <th>Наименование онтологии</th>
                 <th>Наименование субъекта</th>
                 <th>Наименование предиката</th>
                 <th>Наименование объекта</th>
                 <th>Дата создания</th>
                 <th>Описание</th>
-        </thead>
-        {% for rdf_type in rdf_types %}
-        <div class="inter-fz" gap="20px">
-            <tr onclick="window.location.href='/rdf_type/{{ rdf_type.id }}'; return false">
-                <td class="inter-fz-1">{{rdf_type.ontology}}</td>
-                <td class="inter-fz-1">{{rdf_type.subject}}</td>
-                <td class="inter-fz-1">{{rdf_type.name}}</td>
-                <td class="inter-fz-1">{{rdf_type.object}}</td>
-                <td class="inter-fz-1">{{rdf_type.created_at}}</td>
-                <td class="inter-fz-1">{{rdf_type.description}}</td>
-            </tr>
-        </div>
+            </thead>
+            {% for rdf_type in rdf_types %}
+            <div class="inter-fz" gap="20px">
+                <tr onclick="window.location.href='/rdf_type/{{ rdf_type.id }}'; return false">
+                    <td class="inter-fz-1">{{rdf_type.ontology}}</td>
+                    <td class="inter-fz-1">{{rdf_type.subject}}</td>
+                    <td class="inter-fz-1">{{rdf_type.name}}</td>
+                    <td class="inter-fz-1">{{rdf_type.object}}</td>
+                    <td class="inter-fz-1">{{rdf_type.created_at}}</td>
+                    <td class="inter-fz-1">{{rdf_type.description}}</td>
+                </tr>
+            </div>
 
-        {% endfor %} 
-        {% endblock %}
+            {% endfor %} {% endblock %}
 
 
-    </table>
+        </table>
     </main>
 </body>
 
