Исправлен стиль страницы авторизации

--- a/ontology_constructor/ontology_auth/templates/ontology_auth/auth.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/auth.html
@@ -24,9 +24,9 @@
             <div class="a_wrapper">
 
 
-                <div class="auth_wrapper d-flex flex-column gap-3">
+                <div class="authh_wrapper d-flex flex-column gap-3">
 
-                    <input name="username" type="text" placeholder="Имя пользователя">
+                    <input class="username" name="username" type="email" placeholder="Имя пользователя">
                     <input name="password" type="password" placeholder="Пароль">
                     <button class="btn-auth" type="submit">Войти</button>
 
@@ -37,7 +37,6 @@
                     </a>
                 </div>
             </div>
-            Войти через VK ID
         </form>
 
     </div>
