--- a/ontology_constructor/ontology_auth/static/ontology_auth/style_auth.css
+++ b/ontology_constructor/ontology_auth/static/ontology_auth/style_auth.css
@@ -9,14 +9,15 @@ body {
     width: 100%;
     height: 100%;
 }
+
 .inter-fz {
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
     font-weight: 700;
     font-style: normal;
-    font-variation-settings:
-        "slnt" 0;
+    font-variation-settings: "slnt" 0;
 }
+
 .create_account {
     font-size: 24px;
     font-family: "Inter";
@@ -42,13 +43,14 @@ body {
     padding: 8px;
 }
 
-input[type="text"] {
+.username {
     background-color: white;
     border-radius: 8px;
     border: 1px solid #E0E0E0;
     padding: 8px;
     width: 100%;
 }
+
 textarea {
     background-color: white;
     border-radius: 8px;
@@ -74,7 +76,7 @@ input[type="password"] {
     height: 100%;
 }
 
-input[type="text"]::-webkit-input-placeholder {
+input[type="email"]::-webkit-input-placeholder {
     color: #828282;
     font-weight: 350;
     font-size: 18px;
@@ -83,7 +85,7 @@ input[type="text"]::-webkit-input-placeholder {
     padding-left: 10px;
 }
 
-input[type="text"]::-moz-placeholder {
+input[type="email"]::-moz-placeholder {
     color: #ff0000;
     font-weight: 350;
     font-size: 18px;
@@ -112,7 +114,7 @@ input[type="password"]::-moz-placeholder {
     ;
 }
 
-.auth_wrapper {
+.authh_wrapper {
     width: 400px;
 }
 
@@ -128,13 +130,14 @@ input[type="password"]::-moz-placeholder {
     text-align: center;
     justify-content: center;
 }
+
 form input[type=text] {
     color: black;
     font-weight: 500;
     font-size: 23px;
     font-family: "Inter", sans-serif;
     line-height: 30px;
-    padding: .6em 1.4em .5em .8em; 
+    padding: .6em 1.4em .5em .8em;
     margin-bottom: 20px;
     margin-right: 30px;
     margin-left: 30px;
@@ -142,6 +145,7 @@ form input[type=text] {
     width: 60%;
     border-radius: 8px;
 }
+
 form textarea {
     color: black;
     font-weight: 500;
@@ -150,7 +154,7 @@ form textarea {
     background-color: white;
     border-radius: 8px;
     border: 2px solid black;
-    padding: .6em 1.4em .5em .8em; 
+    padding: .6em 1.4em .5em .8em;
     line-height: 30px;
     width: 80%;
     height: 100px;
@@ -158,41 +162,57 @@ form textarea {
     margin-top: 30px;
     margin-right: 30px;
 }
-form select { 
-    
-    font-size: 23px; 
-    font-family: "Inter", sans-serif; 
-    font-weight: 400; 
-    color: #444; 
-    line-height: 1.3; 
-    padding: .6em 1.4em .5em .8em; 
-    width: 200px; 
-    max-width: 100%; 
-    box-sizing: border-box; 
-    margin: 20px 20px 20px 20px; 
+
+form select {
+    font-size: 23px;
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    color: #444;
+    line-height: 1.3;
+    padding: .6em 1.4em .5em .8em;
+    width: 200px;
+    max-width: 100%;
+    box-sizing: border-box;
+    margin: 20px 20px 20px 20px;
     border: 2px solid black;
     border-radius: .5em;
     outline: none;
     background-position: right .7em top 50%, 0 0;
-    background-size: .65em auto, 100%; 
-    } 
-     form select::-ms-expand { display: none; } 
-     form select:hover { border-color: #888;} 
-     form select:active, form select:hover {
-        outline-color:  #888;
-      }
-    
-     form select:focus { border-color: #aaa; 
+    background-size: .65em auto, 100%;
+}
+
+form select::-ms-expand {
+    display: none;
+}
+
+form select:hover {
+    border-color: #888;
+}
+
+form select:active,
+form select:hover {
+    outline-color: #888;
+}
+
+form select:focus {
+    border-color: #aaa;
     color: #222;
-     outline: none; 
-    } 
-     form select option { font-weight:normal; } 
-     *[dir="rtl"] form select, :root:lang(ar) form select, :root:lang(iw) form select { 
-    background-position: left .7em top 50%, 0 0; 
-    padding: .6em .8em .5em 1.4em; 
-    }
-    .container-1 {
-        display: flex;
-        flex-direction: row;
-        width: 80%;
-    }
+    outline: none;
+}
+
+form select option {
+    font-weight: normal;
+}
+
+*[dir="rtl"] form select,
+ :root:lang(ar) form select,
+ :root:lang(iw) form select {
+    background-position: left .7em top 50%, 0 0;
+    padding: .6em .8em .5em 1.4em;
+}
+
+.container-1 {
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+}
