--- a/ontology_constructor/ontology_auth/templates/ontology_auth/auth.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/auth.html
@@ -26,7 +26,7 @@
 
                 <div class="authh_wrapper d-flex flex-column gap-3">
 
-                    <input class="username" name="username" type="email" placeholder="Имя пользователя">
+                    <input class="username" name="username" type="text" placeholder="Имя пользователя">
                     <input name="password" type="password" placeholder="Пароль">
                     <button class="btn-auth" type="submit">Войти</button>
 
