--- a/ontology_constructor/ontology_auth/static/ontology_auth/style-2.css
+++ b/ontology_constructor/ontology_auth/static/ontology_auth/style-2.css
@@ -1,16 +1,18 @@
 @charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300&subset=latin,cyrillic);
-
 * {
     box-sizing: border-box;
 }
 
+
 /**
  * Максимальная высота базового контейнера
  */
+
 html {
     font-size: 100%;
 }
+
 html,
 body {
     margin: 0;
@@ -51,7 +53,7 @@ article {
     margin: 0 1em;
     padding: 0 22px;
     -webkit-transition: -webkit-transform .3s;
-    -moz-transition: : -moz-transform .3s;
+    -moz-transition: -moz-transform .3s;
     transition: transform .3s;
 }
 
@@ -102,6 +104,7 @@ a {
     color: #006b05;
     text-decoration: none;
 }
+
 .btn {
     -webkit-border-radius: 10em;
     -moz-border-radius: 10em;
@@ -109,11 +112,11 @@ a {
     -o-border-radius: 10em;
     border-radius: 10em;
     border: 0;
-    color: #fff!important;
+    color: #fff;
     margin: 6px;
-    white-space: normal!important;
+    white-space: normal;
     word-wrap: break-word;
-		display: inline-block;
+    display: inline-block;
     line-height: 1.25;
     text-align: center;
     vertical-align: middle;
@@ -125,29 +128,32 @@ a {
     padding: .5rem 1rem;
     font-size: 1rem;
     font-weight: 400;
-    -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12);
-    -moz-box-shadow: 0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12);
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12);
+    -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
+    -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
 }
+
 .btn {
-	  -webkit-transition: box-shadow .2s ease-out;
-	  -moz-transition: box-shadow .2s ease-out;
-		-ms-transition: box-shadow .2s ease-out;
+    -webkit-transition: box-shadow .2s ease-out;
+    -moz-transition: box-shadow .2s ease-out;
+    -ms-transition: box-shadow .2s ease-out;
     transition: box-shadow .2s ease-out;
 }
+
 .btn:hover {
-	  -webkit-box-shadow: 0 5px 11px 0 rgba(0,0,0,.18),0 4px 15px 0 rgba(0,0,0,.15);
-	  -moz-box-shadow: 0 5px 11px 0 rgba(0,0,0,.18),0 4px 15px 0 rgba(0,0,0,.15);
-	  box-shadow: 0 5px 11px 0 rgba(0,0,0,.18),0 4px 15px 0 rgba(0,0,0,.15);
+    -webkit-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
+    -moz-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
+    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
 }
+
 .btn-primary {
-	  border: 2px solid #2BBBAD;
-    color: #00695c!important;
+    border: 2px solid #2BBBAD;
+    color: #00695c;
     background-color: transparent;
 }
 
 .btn-secondary {
     border: 2px solid #00C851;
-    color: #007E33!important;
+    color: #007E33;
     background-color: transparent;
 }
