--- a/ontology_constructor/ontology_auth/static/ontology_auth/style_index.css
+++ b/ontology_constructor/ontology_auth/static/ontology_auth/style_index.css
@@ -22,6 +22,18 @@
     padding: 24px, 32px, 24px, 32px;
 }
 
+.gap-72 {
+    gap: 72px;
+}
+
+.gap-12 {
+    gap: 12px;
+}
+
+.gap-8 {
+    gap: 8px;
+}
+
 button:hover {
     background-color: #E0E0E0;
     border-radius: 8px;
