--- a/ontology_constructor/ontology_auth/templates/ontology_auth/ontology_detail.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/ontology_detail.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'ontology_auth/left-nav-style.css' %}">
     <link rel="stylesheet" href="{% static 'ontology_auth/style.css' %}">
+    <link rel="stylesheet" href="{% static 'ontology_auth/style_add.css' %}">
     <link rel="stylesheet" href="{% static 'ontology_auth/style_profile.css' %}">
     <title>Создание субъекта</title>
     <link rel="stylesheet" href="{% static 'ontology_auth/style_auth.css' %}">
@@ -26,34 +27,13 @@
 </head>
 
 <body>
-    <!-- 
-    Скрытый checkbox, отвечающий за переключение панели, должен быть в верхней части документа, лучше сразу после тега `<body>`
 
-    `id` атрибут предназначен для связки с атрибутом `for` тега <label>
-
-    Атрибут `hidden` указывает состояние «скрытый» у текущего элемента
-    -->
     <input type="checkbox" id="nav-toggle" hidden>
-    <!-- 
-    Выдвижную панель размещаете ниже
-    флажка (checkbox), но не обязательно 
-    непосредственно после него, например
-    можно и в конце страницы
-    -->
     <nav class="nav">
-        <!-- 
-    Метка с именем `id` чекбокса в `for` атрибуте
-    Символ Unicode 'TRIGRAM FOR HEAVEN' (U+2630)
-    Пустой атрибут `onclick` используем для исправления бага в iOS < 6.0
-    См: http://timpietrusky.com/advanced-checkbox-hack 
-    -->
+
         <label for="nav-toggle" class="nav-toggle" onclick></label>
-        <!-- 
-    Здесь размещаете любую разметку,
-    если это меню, то скорее всего неупорядоченный список <ul>
-    -->
         <h2 class="logo">
-            <a href="//UTMN.SU/">UTMN.SU</a>
+            <a href="{% url 'index' %}">UTMN.SU</a>
         </h2>
         <ul>
             <li>
@@ -67,7 +47,7 @@
         </ul>
     </nav>
     <main role="main">
-        <div class="title_weapper inter-fz fs-2" gap="20 px">
+        <div class="title_weapper inter-fz fs-2 block-gap">
             Онтология
         </div>
         <form method="POST" action="/ontology/{{ontology.id}}/update">
@@ -75,7 +55,7 @@
             <div class="container-1">
                 {% for field in form %} {{field}} {% endfor %}
             </div>
-            <div class="inter-fz fs-4" gap="20 px">
+            <div class="inter-fz fs-4 block-gap">
                 {{ ontology.created_at}}
             </div>
             <div>
@@ -84,7 +64,7 @@
         </form>
         {% if request.user.is_authenticated %} {% if request.user.id == ontology.owner.id %}
         <button class="button" onclick="edited()" id="edit">Редактировать</button> {% endif %} {% endif %} {% block content %}
-        <div class="title_weapper inter-fz fs-4" gap="20 px">
+        <div class="title_weapper inter-fz fs-4 block-gap">
             Список предикатов
         </div>
         <table class="table-2">
@@ -97,7 +77,7 @@
                 <th>Описание</th>
             </thead>
             {% for rdf_type in rdf_types %}
-            <div class="inter-fz" gap="20px">
+            <div class="inter-fz block-gap">
                 <tr onclick="window.location.href='/rdf_type/{{ rdf_type.id }}'; return false">
                     <td class="inter-fz-1">{{rdf_type.ontology}}</td>
                     <td class="inter-fz-1">{{rdf_type.subject}}</td>
