--- a/ontology_constructor/ontology_auth/templates/ontology_auth/ontology_list.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/ontology_list.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'ontology_auth/left-nav-style.css' %}">
     <link rel="stylesheet" href="{% static 'ontology_auth/style.css' %}">
+    <link rel="stylesheet" href="{% static 'ontology_auth/style_add.css' %}">
     <link rel="stylesheet" href="{% static 'ontology_auth/style_profile.css' %}">
     <title>Создание субъекта</title>
     <link rel="stylesheet" href="{% static 'ontology_auth/style_auth.css' %}">
@@ -17,40 +18,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="shortcut icon" type="image/png" href="{% static 'ontology_auth/favicon.ico' %}" />
     <script src="{% static 'ontology_auth/ontology_list.js' %}"></script>
-
-
-
-
     <title>UTMN.su - конструктор онтологий</title>
 </head>
 
 <body>
-    <!-- 
-    Скрытый checkbox, отвечающий за переключение панели, должен быть в верхней части документа, лучше сразу после тега `<body>`
-
-    `id` атрибут предназначен для связки с атрибутом `for` тега <label>
-
-    Атрибут `hidden` указывает состояние «скрытый» у текущего элемента
-    -->
     <input type="checkbox" id="nav-toggle" hidden>
-    <!-- 
-    Выдвижную панель размещаете ниже
-    флажка (checkbox), но не обязательно 
-    непосредственно после него, например
-    можно и в конце страницы
-    -->
+
     <nav class="nav">
-        <!-- 
-    Метка с именем `id` чекбокса в `for` атрибуте
-    Символ Unicode 'TRIGRAM FOR HEAVEN' (U+2630)
-    Пустой атрибут `onclick` используем для исправления бага в iOS < 6.0
-    См: http://timpietrusky.com/advanced-checkbox-hack 
-    -->
+
         <label for="nav-toggle" class="nav-toggle" onclick></label>
-        <!-- 
-    Здесь размещаете любую разметку,
-    если это меню, то скорее всего неупорядоченный список <ul>
-    -->
+
         <h2 class="logo">
             <a href="//UTMN.SU/">UTMN.SU</a>
         </h2>
@@ -68,30 +45,30 @@
     <main role="main">
 
         <div class="name_wrapper">
-            <div class="title_weapper inter-fz fs-2" style="margin-left:20px; text-align: center">
+            <div class="title_weapper inter-fz fs-2 ml-20 tc">
                 <p>Список онтологий</p>
             </div>
         </div>
-        <div class="title_weapper inter-fz fs-4" style="margin-left:20px;">
-            <div class="btn_wrappr inter-fz-1 fs-4">
-                <button class="btn_wrappr_1 inter-fz-1" style="margin-left:80px;" onclick="window.location.href='/ontology/new/subject/'; return false">Создать субъект</button>
-                <button class="btn_wrappr_1 inter-fz-1" style="margin-left:80px;" onclick="window.location.href='/ontology/new/object/'; return false">Создать объект</button>
-                <button class="btn_wrappr_1 inter-fz-1" style="margin-left:80px;" onclick="window.location.href='/ontology/new/predicat/'; return false">Создать предикат</button>
+        <div class="title_weapper inter-fz fs-4 ml-20">
+            <div class=" btn_wrappr inter-fz-1 fs-4 ">
+                <button class="btn_wrappr_1 inter-fz-1 ml-80 " onclick="window.location.href='/ontology/new/subject/' ; return false ">Создать субъект</button>
+                <button class="btn_wrappr_1 inter-fz-1 ml-80 " onclick="window.location.href='/ontology/new/object/' ; return false ">Создать объект</button>
+                <button class="btn_wrappr_1 inter-fz-1 ml-80 " onclick="window.location.href='/ontology/new/predicat/' ; return false ">Создать предикат</button>
             </div>
         </div>
-        <div style="margin-bottom:20px; margin-left: 30px">
-            <table class="table-1">
+        <div class="mb-20 ml-30 ">
+            <table class="table-1 ">
                 <tr>
-                    <th onclick="my_ontology_list_func()" id="my_ontology_list_but">Мои онтологии</th>
-                    <th onclick="gl_ontology_list_func()" id="gl_ontology_list_but">Общедоступные онтологии</th>
-                    <th onclick="subject_list_func()" id="subject_list_but">Субъекты</th>
-                    <th onclick="object_list_func()" id="object_list_but">Объекты</th>
+                    <th onclick="my_ontology_list_func() " id="my_ontology_list_but ">Мои онтологии</th>
+                    <th onclick="gl_ontology_list_func() " id="gl_ontology_list_but ">Общедоступные онтологии</th>
+                    <th onclick="subject_list_func() " id="subject_list_but ">Субъекты</th>
+                    <th onclick="object_list_func() " id="object_list_but ">Объекты</th>
                 </tr>
             </table>
         </div>
-        <div id="my_ontology_list">
-            <table class="table-2">
-                <thead class="inter-fz">
+        <div id="my_ontology_list ">
+            <table class="table-2 ">
+                <thead class="inter-fz ">
 
                     <th>Наименование онтологии</th>
                     <th>Доступность онтологии</th>
@@ -100,29 +77,29 @@
                     <th></th>
                 </thead>
                 {% for ontology in my_ontologys %}
-                <div class="inter-fz" gap="20px">
+                <div class="inter-fz block-gap ">
                     <tr>
-                        <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.name}}</td>
-                        <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.access}}</td>
-                        <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.created_at}}</td>
-                        <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.owner}}</td>
+                        <td class="inter-fz-1 " onclick="window.location.href='/ontology/{{ ontology.id }}' ; return false ">{{ontology.name}}</td>
+                        <td class="inter-fz-1 " onclick="window.location.href='/ontology/{{ ontology.id }}' ; return false ">{{ontology.access}}</td>
+                        <td class="inter-fz-1 " onclick="window.location.href='/ontology/{{ ontology.id }}' ; return false ">{{ontology.created_at}}</td>
+                        <td class="inter-fz-1 " onclick="window.location.href='/ontology/{{ ontology.id }}' ; return false ">{{ontology.owner}}</td>
                         <td>
-                            <form action="" method="get">
-                                <button class="button inter-fz-1" name="delete_ontology" value="{{ ontology.id }}">Удалить</button>
+                            <form action=" " method="get ">
+                                <button class="button inter-fz-1 " name="delete_ontology " value="{{ ontology.id }} ">Удалить</button>
                             </form>
                         </td>
                     </tr>
                 </div>
                 {% empty %}
-                <div class="title_weapper inter-fz fs-2" style="margin-left:20px;">
+                <div class="title_weapper inter-fz fs-2 ml-20 ">
                     <p>У вас пока нет онтологий!</p>
                 </div>
                 {% endfor %}
             </table>
         </div>
-        <div id="gl_ontology_list">
-            <table class="table-2">
-                <thead class="inter-fz">
+        <div id="gl_ontology_list ">
+            <table class="table-2 ">
+                <thead class="inter-fz ">
 
                     <th>Наименование онтологии</th>
                     <th>Доступность онтологии</th>
@@ -130,25 +107,25 @@
                     <th>Создатель онтологии</th>
                 </thead>
                 {% for ontology in gl_ontologys %}
-                <div class="inter-fz" gap="20px">
+                <div class="inter-fz block-gap ">
                     <tr>
-                        <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.name}}</td>
-                        <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.access}}</td>
-                        <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.created_at}}</td>
-                        <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.owner}}</td>
+                        <td class="inter-fz-1 " onclick="window.location.href='/ontology/{{ ontology.id }}' ; return false ">{{ontology.name}}</td>
+                        <td class="inter-fz-1 " onclick="window.location.href='/ontology/{{ ontology.id }}' ; return false ">{{ontology.access}}</td>
+                        <td class="inter-fz-1 " onclick="window.location.href='/ontology/{{ ontology.id }}' ; return false ">{{ontology.created_at}}</td>
+                        <td class="inter-fz-1 " onclick="window.location.href='/ontology/{{ ontology.id }}' ; return false ">{{ontology.owner}}</td>
 
                     </tr>
                 </div>
                 {% empty %}
-                <div class="title_weapper inter-fz fs-2" style="margin-left:20px;">
+                <div class="title_weapper inter-fz fs-2 ml-20 ">
                     <p>У вас пока нет онтологий!</p>
                 </div>
                 {% endfor %}
             </table>
         </div>
-        <div id="object_list">
-            <table class="table-2">
-                <thead class="inter-fz">
+        <div id="object_list ">
+            <table class="table-2 ">
+                <thead class="inter-fz ">
 
                     <th>Наименование субъекта</th>
                     <th>Дата создания</th>
@@ -156,28 +133,28 @@
                     <th></th>
                 </thead>
                 {% for object in objects %}
-                <div class="inter-fz" gap="20px">
+                <div class="inter-fz block-gap ">
                     <tr>
-                        <td class="inter-fz-1" onclick="window.location.href='/object/{{ object.id }}'; return false">{{object.name}}</td>
-                        <td class="inter-fz-1" onclick="window.location.href='/object/{{ object.id }}'; return false">{{object.created_at}}</td>
-                        <td class="inter-fz-1" onclick="window.location.href='/object/{{ object.id }}'; return false">{{object.owner}}</td>
+                        <td class="inter-fz-1 " onclick="window.location.href='/object/{{ object.id }}' ; return false ">{{object.name}}</td>
+                        <td class="inter-fz-1 " onclick="window.location.href='/object/{{ object.id }}' ; return false ">{{object.created_at}}</td>
+                        <td class="inter-fz-1 " onclick="window.location.href='/object/{{ object.id }}' ; return false ">{{object.owner}}</td>
                         <td>
-                            <form action="" method="get">
-                                <button class="button inter-fz-1" name="delete_object" value="{{ object.id }}">Удалить</button>
+                            <form action=" " method="get ">
+                                <button class="button inter-fz-1 " name="delete_object " value="{{ object.id }} ">Удалить</button>
                             </form>
                         </td>
                     </tr>
                 </div>
                 {% empty %}
-                <div class="title_weapper inter-fz fs-2" style="margin-left:20px;">
+                <div class="title_weapper inter-fz fs-2 ml-20 ">
                     <p>У вас пока нет объектов!</p>
                 </div>
                 {% endfor %}
             </table>
         </div>
-        <div id="subject_list">
-            <table class="table-2">
-                <thead class="inter-fz">
+        <div id="subject_list ">
+            <table class="table-2 ">
+                <thead class="inter-fz ">
 
                     <th>Наименование субъекта</th>
                     <th>Дата создания</th>
@@ -185,20 +162,20 @@
                     <th></th>
                 </thead>
                 {% for subject in subjects %}
-                <div class="inter-fz" gap="20px">
+                <div class="inter-fz block-gap ">
                     <tr>
-                        <td class="inter-fz-1" onclick="window.location.href='/subject/{{ subject.id }}'; return false">{{subject.name}}</td>
-                        <td class="inter-fz-1" onclick="window.location.href='/subject/{{ subject.id }}'; return false">{{subject.created_at}}</td>
-                        <td class="inter-fz-1" onclick="window.location.href='/subject/{{ subject.id }}'; return false">{{subject.owner}}</td>
+                        <td class="inter-fz-1 " onclick="window.location.href='/subject/{{ subject.id }}' ; return false ">{{subject.name}}</td>
+                        <td class="inter-fz-1 " onclick="window.location.href='/subject/{{ subject.id }}' ; return false ">{{subject.created_at}}</td>
+                        <td class="inter-fz-1 " onclick="window.location.href='/subject/{{ subject.id }}' ; return false ">{{subject.owner}}</td>
                         <td>
-                            <form action="" method="get">
-                                <button class="button inter-fz-1" name="delete_subject" value="{{ subject.id }}">Удалить</button>
+                            <form action=" " method="get ">
+                                <button class="button inter-fz-1 " name="delete_subject " value="{{ subject.id }} ">Удалить</button>
                             </form>
                         </td>
                     </tr>
                 </div>
                 {% empty %}
-                <div class="title_weapper inter-fz fs-2" style="margin-left:20px;">
+                <div class="title_weapper inter-fz fs-2 ml-20 ">
                     <p>У вас пока нет субъектов!</p>
                 </div>
                 {% endfor %}
