--- a/ontology_constructor/ontology_auth/templates/ontology_auth/subject_detail.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/subject_detail.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{% static 'ontology_auth/left-nav-style.css' %}">
     <link rel="stylesheet" href="{% static 'ontology_auth/style.css' %}">
     <link rel="stylesheet" href="{% static 'ontology_auth/style_profile.css' %}">
+    <link rel="stylesheet" href="{% static 'ontology_auth/style_add.css' %}">
     <title>Субъект {{subject.name}}</title>
     <link rel="stylesheet" href="{% static 'ontology_auth/detail.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -16,34 +17,14 @@
 </head>
 
 <body>
-    <!-- 
-    Скрытый checkbox, отвечающий за переключение панели, должен быть в верхней части документа, лучше сразу после тега `<body>`
 
-    `id` атрибут предназначен для связки с атрибутом `for` тега <label>
-
-    Атрибут `hidden` указывает состояние «скрытый» у текущего элемента
-    -->
     <input type="checkbox" id="nav-toggle" hidden>
-    <!-- 
-    Выдвижную панель размещаете ниже
-    флажка (checkbox), но не обязательно 
-    непосредственно после него, например
-    можно и в конце страницы
-    -->
     <nav class="nav">
-        <!-- 
-    Метка с именем `id` чекбокса в `for` атрибуте
-    Символ Unicode 'TRIGRAM FOR HEAVEN' (U+2630)
-    Пустой атрибут `onclick` используем для исправления бага в iOS < 6.0
-    См: http://timpietrusky.com/advanced-checkbox-hack 
-    -->
+
         <label for="nav-toggle" class="nav-toggle" onclick></label>
-        <!-- 
-    Здесь размещаете любую разметку,
-    если это меню, то скорее всего неупорядоченный список <ul>
-    -->
+
         <h2 class="logo">
-            <a href="//UTMN.SU/">UTMN.SU</a>
+            <a href="{% url 'index' %}">UTMN.SU</a>
         </h2>
         <ul>
             <li>
@@ -57,7 +38,7 @@
         </ul>
     </nav>
     <main role="main">
-        <div class="title_weapper inter-fz fs-2" gap="20 px">
+        <div class="title_weapper inter-fz fs-2 block-gap">
             Субъект
         </div>
         <form method="POST" action="/subject/{{subject.id}}/update">
@@ -66,7 +47,7 @@
                 {{field}}
             </div>
             {% endfor %}
-            <div class="inter-fz fs-4" gap="20 px">
+            <div class="inter-fz fs-4 block-gap">
                 {{ subject.created_at}}
             </div>
             <div>
@@ -77,7 +58,7 @@
 
         {% if request.user.is_authenticated %} {% if request.user.id == subject.owner.id %}
         <button class="button" onclick="edited()" id="edit">Редактировать</button> {% endif %} {% endif %}
-        <div class="title_weapper inter-fz fs-4" gap="20 px">
+        <div class="title_weapper inter-fz fs-4 block-gap">
             Список предикатов
         </div>
         {% block content %}
@@ -91,7 +72,7 @@
                 <th>Описание</th>
             </thead>
             {% for rdf_type in rdf_types %}
-            <div class="inter-fz" gap="20px">
+            <div class="inter-fz block-gap">
                 <tr onclick="window.location.href='/rdf_type/{{ rdf_type.id }}'; return false">
                     <td class="inter-fz-1">{{rdf_type.ontology}}</td>
                     <td class="inter-fz-1">{{rdf_type.subject}}</td>
