Добавлены страницы ошибок

--- a/ontology_constructor/ontology_auth/static/ontology_auth/style_index.css
+++ b/ontology_constructor/ontology_auth/static/ontology_auth/style_index.css
@@ -11,6 +11,10 @@
     padding: 120px;
 }
 
+.error_code {
+    font-size: 120px;
+}
+
 .btn_wrappr>button {
     background-color: black;
     border-radius: 8px;
